opam-version: "1.2"
name: "hardcaml-yosys"
maintainer: "Andy Ray <andy.ray@ujamjar.com>"
authors: [ "Andy Ray" ]
license: "ISC"
homepage: "https://github.com/ujamjar/hardcaml-yosys"
bug-reports: "https://github.com/ujamjar/hardcaml-yosys/issues"
dev-repo: "https://github.com/ujamjar/hardcaml-yosys.git"
build: [ ["jbuilder" "build" "-p" name "-j" jobs] ]
depends: [
  "ocamlfind" {build}
  "jbuilder" {build & >= "1.0+beta8"}
  "atdgen"
  "hardcaml" { >= "1.2.0" & < "2.0.0" }
  "ppx_deriving_hardcaml"
]
available: [ ocaml-version >= "4.02.0" ]
name: "hardcaml-yosys"
version: "0.2.0"
license: "ISC"
substs:[ "pkg/META" ]
